--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,11 +2,11 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 	<display-name>schedule</display-name>
 	<servlet>
-		<servlet-name>UserController</servlet-name>
+		<servlet-name>CalendarController</servlet-name>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>UserController</servlet-name>
-		<url-pattern>/user</url-pattern>
+		<servlet-name>CalendarController</servlet-name>
+		<url-pattern>/calendar</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
