--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-	<display-name>schedule</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+
 	<servlet>
-		<servlet-name>CalendarController</servlet-name>
+		<servlet-name>schedule</servlet-name>
+		<servlet-class>service.ScheduleService</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>sch_detail</servlet-name>
+		<servlet-class>service.ScheduleDetailService</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>CalendarController</servlet-name>
-		<url-pattern>/calendar</url-pattern>
+		<servlet-name>schedule</servlet-name>
+		<url-pattern>/schedule</url-pattern>
 	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+	<servlet-mapping>
+		<servlet-name>sch_detail</servlet-name>
+		<url-pattern>/sch_detail</url-pattern>
+	</servlet-mapping>
+
 </web-app>
